...
    <string name="labelCalories">Calories per Unit:</string>
    <string name="labelAllergies">Allergies:</string>
    <string name="labelTotalCalories">Total Calories:</string>
    <string name="labelTotalGroceryPrice">Total Price of Grocery List</string>

    <!--Checkbox Labels-->
    <string name="checkLactose">Contains Lactose</string>
    <string name="checkFish">Contains Fish</string>
    <string name="checkEggs">Contains Eggs</string>
    <string name="checkGluten">Contains Gluten</string>
    <string name="checkNuts">Contains Nuts</string>
    <string name="checkSoy">Contains Soy</string>

    <!--Edit Text Hints-->
    <string name="hintName">Name</string>
    <string name="hintQuantity">Quantity</string>
    <string name="hintUnits">Units</string>
    <string name="hintQuantityToBuy">Quantity to Buy</string>
...
    <string name="btnSubmit">Submit</string>
    <string name="btnAdd">Add</string>
    <string name="btnBuy">Buy Item</string>
    <string name="btnEdit">Edit</string>
    <string name="btnRemove">Remove</string>
    <string name="btnAddToGrocery">Add to Grocery List</string>
    <string name="btnBackToList">Back to List</string>
    <string name="btnMakeRecipe">Make</string>
    <string name="btnAddIngredient">Add Ingredient</string>
    <string name="btnAddInstruction">Add Instruction</string>
    <string name="btnBuyAll">Buy All</string>
    <string name="btnMinus">-</string>
    <string name="btnAddToGroceryList">Add To Grocery List</string>

    <!--Menu Items-->
    <string name="menuInventory">Current Inventory</string>
    <string name="menuGrocery">Grocery List</string>
    <string name="menuRecipes">Recipes</string>

    <!--Other-->
    <string name="enableThresholdText">Enable automatic adding of item to grocery list below given threshold?</string>
</resources>
