...
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="20"
            android:text="@string/defaultPrice"/>

        <ImageView
            android:id="@+id/itemDownArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/expandArrow"
            android:padding="5dp"
            android:src="@drawable/ic_down_arrow" />
...
        android:layout_height="wrap_content"
        android:layout_below="@id/itemViewCollapsed"
        android:visibility="gone"
        android:weightSum="100">

        <Button
            android:id="@+id/btnAddInvItemToGrocery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:text="@string/btnAddToGrocery"
            android:backgroundTint="@color/blueColour3"/>

        <Button
            android:id="@+id/btnEditInvItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:text="@string/btnEdit"
            android:backgroundTint="@color/blueColour3"/>

        <Button
            android:id="@+id/btnRemoveInvItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="33"
            android:text="@string/btnRemove"
            android:backgroundTint="@color/blueColour3"/>
...
